@@ -31,4 +31,4 @@ requires:
   perl: 5.005
 resources:
   license: http://dev.perl.org/licenses/
-version: 3.005
+version: 3.006
